# Single-Layer-Neural-Network-LR

./: README.md
Server/: .env.example  .gitignore  LICENSE  README.md  main.py  neural_network.py  pyproject.toml  requirements.txt  server.py  testing_sentence.json  wikipedia_articles_titles_to_parse.json  wikipedia_data_parser.py
Server/Data/de/: alchemy.txt  architecture.txt  art.txt  beer.txt  history.txt  magic.txt  milk.txt  pizza.txt  sky.txt  war.txt  water.txt  wine.txt
Server/Data/en/: alchemy.txt  architecture.txt  art.txt  beer.txt  history.txt  magic.txt  milk.txt  pizza.txt  sky.txt  war.txt  water.txt  wine.txt
Server/Data/es/: alchemy.txt  architecture.txt  art.txt  beer.txt  history.txt  magic.txt  milk.txt  pizza.txt  sky.txt  war.txt  water.txt  wine.txt
Server/Data/pl/: alchemy.txt  architecture.txt  art.txt  beer.txt  history.txt  magic.txt  milk.txt  pizza.txt  sky.txt  war.txt  water.txt  wine.txt
Server/Model/: perceptron.py
Server/source/: conf.py  index.rst
client-vite/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
client-vite/src/: About.tsx  App.tsx  CustomNavbar.tsx  Home.tsx  LanguageBarChart.tsx  Utils.ts  main.tsx
